calico/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-c
  namespace: namespace-c
spec:
  containers:
    - name: postgres
      image: postgres:latest
      ports:
        - containerPort: 5432
