calico/network-policy-namespace-b.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-b
  namespace: namespace-b
spec:
  # TODO:
  # Define ingress
  # Define egress
  podSelector:
    matchLabels:
          name: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: namespace-a
